tranzisztor get(0)